[package]
name = "tg_gpt_survey"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1.0.116"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
